# CircuitPython_BMA423

./: README.rst  bma423.py  pyproject.toml
.github/workflows/: release_gh.yml
docs/: api.rst  conf.py  examples.rst
examples/: bma423_acc_range.py  bma423_output_data_rate.py  bma423_oversample_rate.py  bma423_simpletest.py
