# SPDX-FileCopyrightText: Copyright (c) 2023 Jose D. Montoya
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm",
]

[project]
name = "circuitpython-bma423"
description = "CircuitPython Driver for the Bosch BMA423 accelerometer included in the lilygo watch"
version = "0.0.0+auto.0"
readme = "README.rst"
authors = [
    {name = "Jose D. Montoya", email = "jlib@mailmeto.mozmail.com"}
]
urls = {Homepage = "https://github.com/jposada202020/CircuitPython_BMA423"}
keywords = [
    "sensor",
    "blinka",
    "circuitpython",
    "micropython",
    "bma423",
    "sensor",
    "accelerometer",
    "BMA423",
    "steps",
    "running",
    "lilygo",
]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
py-modules = ["bma423"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {optional = {file = ["optional_requirements.txt"]}}
